Fix footer logo alignment

--- a/components/footer/index.css
+++ b/components/footer/index.css
@@ -289,7 +289,7 @@
   .Footer-label {
     margin: 0 2.1rem 0 0;
     position: relative;
-    top: -0.4rem;
+    top: -0.2rem;
     font-size: 0.8rem;
   }
 }
